--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MessAround2Activity!</string>
-    <string name="app_name">MessAround2</string>
+    <string name="hello">Hello World, TriforceApp!</string>
+    <string name="app_name">TriforceApp</string>
     <string name="username">username</string>
     <string name="password">password</string>
     <string name="register">register</string>
