added contentDescription to our ImageView logo with the string triforceapp_logo with the value of "TriforceApp Logo"
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@104 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="password">password</string>
     <string name="register">register</string>
     <string name="enter">enter</string>
+    <string name="triforceapp_logo">TriforceApp Logo</string>
 
 </resources>
