adding new register page and edited strings.xml to accomodate the strings from the register page
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@110 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="register">register</string>
     <string name="enter">enter</string>
     <string name="triforceapp_logo">TriforceApp Logo</string>
+    <string name="name">name</string>
+    <string name="email">email</string>
 
 </resources>
