git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@111 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="triforceapp_logo">TriforceApp Logo</string>
     <string name="name">name</string>
     <string name="email">email</string>
+    <string name="registration">REGISTRATION</string>
 
 </resources>
