git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@113 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="name">name</string>
     <string name="email">email</string>
     <string name="registration">REGISTRATION</string>
+    <string name="login">LOGIN</string>
 
 </resources>
