git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@115 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="password">password</string>
     <string name="register">register</string>
     <string name="enter">enter</string>
+    <string name="user_email">user_email</string>
+
     <string name="triforceapp_logo">TriforceApp Logo</string>
     <string name="name">name</string>
     <string name="email">email</string>
