--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="registration">REGISTRATION</string>
     <string name="login">LOGIN</string>
     <string name="cancel">cancel</string>
+    <string name="MAINPAGE">MAINPAGE</string>
 
 </resources>
