git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@153 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="registration">REGISTRATION</string>
     <string name="login">LOGIN</string>
     <string name="cancel">cancel</string>
-    <string name="MAINPAGE">MAINPAGE</string>
+    <string name="main">MAIN</string>
 
 </resources>
