all xml elements should have strings and ids. the last two letters of each id refer to the page they belong to.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@172 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -36,5 +36,13 @@
         <string name="newTaskButton">New Task</string>
         <string name="logoutMain">Logout</string>
         <string name="cancelButtonMain">Cancel</string>
+        
+        <string name="taskNameVT">Task Name</string>
+        <string name="editTaskVT">Edit Task</string>
+        <string name="descriptionStrVT">Task Description: </string>
+        <string name="dateStrVT">Date: </string>
+        <string name="timeStrVT">Time: </string>
+        <string name="typeStrVT">Type of Task: </string>
+        <string name="locationStrVT">Location: </string>
 
 </resources>
