edited Task List Header Title
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@190 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -32,7 +32,7 @@
         <item name="workSpinnerNT">Work</item>
     </string-array>
 
-    <string name="userTaskMainHeader">User\'s Tasks</string>
+    <string name="userTaskListHeader">TASK LIST</string>
     <string name="newTaskButton">New Task</string>
     <string name="logoutMain">Logout</string>
     <string name="cancelButtonMain">Cancel</string>
