cleaned up strings
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@214 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">TriforceApp</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="register">Register</string>
-    <string name="enter">Enter</string>
-    <string name="user_email">user_email</string>
-    <string name="triforceapp_logo">TriforceApp Logo</string>
-    <string name="name">Name</string>
-    <string name="email">Email</string>
-    <string name="registration">REGISTRATION</string>
+
+    <!-- TITLE STRINGS -->
     <string name="login">LOGIN</string>
-    <string name="cancel">Cancel</string>
-    <string name="main">MAIN</string>
-    <string name="taskNameNT">Task Name</string>
+    <string name="registration">REGISTRATION</string>
+    <string name="userTaskListHeader">TASK LIST</string>
     <string name="headerNT">NEW TASK</string>
     <string name="headerET">EDIT TASK</string>
-    <string name="typeOfTaskNT">Type of Task</string>
-    <string name="taskDescriptionNT">Description</string>
-    <string name="taskTypeNT">Task Type</string>
-    <string name="taskDateNT">Date</string>
-    <string name="taskTimeNT">Time</string>
-    <string name="taskLocationNT">Location</string>
-    <string name="taskSaveButton">Save</string>
-    <string name="selectPromptNT">Select One</string>
 
+    <!-- BUTTON TEXT -->
+    <string name="enter">Enter</string>
+    <string name="register">Register</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="logoutMain">Logout</string>
+
+    <!-- FIELD TAGS -->
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="taskName">Task Name</string>
+    <string name="taskDescription">Description</string>
+    <string name="taskType">Task Type</string>
+    <string name="taskDate">Due Date: </string>
+    <string name="taskTime">Time Due: </string>
+    <string name="taskLocation">Location</string>
+
+    <!-- SPINNERS -->
     <string name="task_types_prompt">Choose a Task Type</string>
+
     <string-array name="types_array">
         <item name="personalSpinnerNT">Personal</item>
         <item name="schoolSpinnerNT">School</item>
         <item name="workSpinnerNT">Work</item>
     </string-array>
-    
+
     <string name="filter_by_prompt">Filter by Type</string>
+
     <string-array name="filter_array">
         <item name="allSpinnerNT">All</item>
         <item name="personalSpinnerNT">Personal</item>
         <item name="schoolSpinnerNT">School</item>
         <item name="workSpinnerNT">Work</item>
     </string-array>
-    
+
     <string name="filter_checks_prompt">Filter by Checks</string>
+
     <string-array name="filter_checks_array">
         <item name="bothChecksSpinner">Both</item>
         <item name="noChecksOnlySpinner">Unchecked Items</item>
         <item name="checksOnlySpinner">Checked Items</item>
     </string-array>
-
-    <string name="userTaskListHeader">TASK LIST</string>
-    <string name="newTaskButton">New Task</string>
-    <string name="logoutMain">Logout</string>
-    <string name="cancelButtonMain">Cancel</string>
-    <string name="taskNameVT">Task Name</string>
-    <string name="descriptionStrVT">Task Description: </string>
-    <string name="dateStrVT">Date: </string>
-    <string name="timeStrVT">Time: </string>
-    <string name="typeStrVT">Type of Task: </string>
-    <string name="locationStrVT">Location: </string>
 
 </resources>
