--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -2,20 +2,31 @@
 <resources>
 
     <string name="app_name">TriforceApp</string>
+    
+    <!-- IMAGE CONTENT DESCRIPTIONS -->
+    <string name="tforce_logo">TriforceApp Logo</string>
+    <string name="newTask">New Task</string>
+    <string name="editTask">Edit Task</string>
+    <string name="deleteTask">Delete Task</string>
+    <string name="showLocations">Show Locations</string>
 
     <!-- TITLE STRINGS -->
-    <string name="login">LOGIN</string>
-    <string name="registration">REGISTRATION</string>
-    <string name="userTaskListHeader">TASK LIST</string>
-    <string name="headerNT">NEW TASK</string>
-    <string name="headerET">EDIT TASK</string>
+    <string name="titleLogin">LOGIN</string>
+    <string name="titleRegistration">REGISTRATION</string>
+    <string name="titleTaskList">TASK LIST</string>
+    <string name="titleNT">NEW TASK</string>
+    <string name="titleET">EDIT TASK</string>
 
     <!-- BUTTON TEXT -->
     <string name="enter">Enter</string>
+    <string name="viewDB">View DB</string>
+    <string name="userExample">Usernames / Passwords / Names / Emails</string>
+    <string name="exitViewDB">Exit DB View</string>
     <string name="register">Register</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="logoutMain">Logout</string>
+    <string name="filterTasks">Filter Tasks</string>
 
     <!-- FIELD TAGS -->
     <string name="username">Username</string>
