updated the layout to be more aesthetically pleasing. can now be told what's being filtered. spacing is better all around.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@247 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="editTask">Edit Task</string>
     <string name="deleteTask">Delete Task</string>
     <string name="showLocations">Show Locations</string>
-    <string name="exitET">Leave Edit Task</string>
+    <string name="exitET">Back</string>
 
     <!-- TITLE STRINGS -->
     <string name="titleLogin">LOGIN</string>
