--- a/TriforceApp/res/values/strings.xml
+++ b/TriforceApp/res/values/strings.xml
@@ -49,6 +49,7 @@
         <item name="personalSpinnerNT">Personal</item>
         <item name="schoolSpinnerNT">School</item>
         <item name="workSpinnerNT">Work</item>
+        <item name="otherSpinnerNT">Other</item>
     </string-array>
 
     <string name="filter_by_prompt">Filter by Type</string>
@@ -58,6 +59,7 @@
         <item name="personalSpinnerNT">Personal</item>
         <item name="schoolSpinnerNT">School</item>
         <item name="workSpinnerNT">Work</item>
+        <item name="otherSpinnerNT">Other</item>
     </string-array>
 
     <string name="filter_checks_prompt">Filter by Checks</string>
